--- a/android/app/src/main/res/drawable/splash.xml
+++ b/android/app/src/main/res/drawable/splash.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Updated splash screen logo -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorPrimary"/>
     <item>
-        <bitmap android:src="@drawable/ic_launcher" android:gravity="center"/>
+        <bitmap android:src="@mipmap/appointment_maker_logo" android:gravity="center"/>
     </item>
 </layer-list>
